# arrow-modules

./: .gitignore  LICENSE  MANIFEST.in  README.md  example.py  mkdocs.yml  pyproject.toml
arrow_modules/: __init__.py  arrow_writer.py
arrow_modules/databases/: __init__.py  connector.py  extractor.py
arrow_modules/storage/: __init__.py  connector.py  extractor.py
dev/: docker-compose-azurite.yml  docker-compose-gcs-server.yml  docker-compose-minio.yml  docker-compose-mysql.yml  docker-compose-postgres.yml  docker-compose-sqlserver.yml
docs/: arrow_writer.md  index.md  usage.md
docs/database/: connector.md  extractor.md
docs/storage/: connector.md  extractor.md
tests/: conftest.py
tests/arrow_writer/: test_arrow_writer.py
tests/databases/: test_connector_databases.py  test_extractor_databases.py  test_init_databases.py
tests/storage/: test_connector_storage.py  test_extractor_storage.py  test_init_storage.py
